# PS1Emulator

./: .clang-format  .gitignore  CCompile.props  CMakeLists.txt  Core.cpp  PS1Emulator.vcxproj  PS1Emulator.vcxproj.filters  PSXEmulator.sln  PSXEmulator.vcxproj  PSXEmulator.vcxproj.filters  README.md  imgui.ini
Emulator/: Bios.cpp  Bios.h  CPU.cpp  CPU.h  Dma.cpp  Dma.h  Gpu.cpp  Gpu.h  Instruction.cpp  Instruction.h  Ram.cpp  Ram.h  Range.h  SPU.h  interconnect.cpp  interconnect.h
Emulator/CPU/: CPU.cpp  CPU.h  Instruction.h
Emulator/CPU/COP/: COP0.cpp  COP0.h  COP2.cpp  COP2.h
Emulator/CPU/COP/Stolen/gte/: opcodes.cpp
Emulator/Core/: Core.cpp  Scheduler.cpp  Scheduler.h
Emulator/DMA/: Attributes.h  Channel.cpp  Channel.h  Dma.cpp  Dma.h
Emulator/GPU/: Gpu.cpp  Gpu.h  VRAM.cpp  VRAM.h
Emulator/GPU/CommandArgs/: Command.h
Emulator/GPU/Rendering/: Buffer.h  Rasterizer.cpp  Rasterizer.h  Renderer.cpp  Renderer.h
Emulator/Memory/: Bios.cpp  IRQ.h  Ram.h  Range.h  interconnect.cpp  interconnect.h
Emulator/Memory/Bios/: Bios.cpp  Bios.h
Emulator/Memory/CDROM/: CDROM.cpp  CDROM.h  Disk.cpp  Disk.h  Location.h  Sector.cpp  Sector.h  TrackBuilder.cpp  TrackBuilder.h
Emulator/Memory/CDROM/Parser/: Readme.txt
Emulator/Memory/IO/: DigitalController.cpp  DigitalController.h  Joypad.cpp  Joypad.h  SIO.cpp  SIO.h
Emulator/Memory/IO/Peripherals/: DigitalController.cpp  DigitalController.h  MemoryCard.cpp  MemoryCard.h
Emulator/Memory/Memories/: Ram.cpp  Ram.h  ScratchPad.h
Emulator/Memory/ScratchPad/: ScratchPad.h
Emulator/Memory/Timers/: Timer.cpp  Timer.h  Timers.cpp  Timers.h
Emulator/Rendering/: Buffer.h  Renderer.cpp  Renderer.h
Emulator/SPU/: SPU.cpp  SPU.h
Emulator/SPU/Stolen/: reverb.cpp  sample.h  spu.cpp  spu.h  voice.cpp  voice.h
Emulator/Utils/: Bitwise.h
Emulator/Utils/FileSystem/: FileManager.cpp  FileManager.h
PSXEmulator/: CCompile.props  CMakeLists.txt  PSXEmulator.cpp  PSXEmulator.vcxproj  PSXEmulator.vcxproj.filters  diff.txt  imgui.ini  render.cap
PSXEmulator/Emulator/CPU/COP/Stolen/gte/: Readme.txt
PSXEmulator/Emulator/SPU/Stolen/: Readme.txt
PSXEmulator/Shaders/: bloomFragment.glsl  bloomVertex.glsl  bloom_blur.frag  bloom_threshold.frag  fragment.glsl  vertex.glsl
PSXEmulator/src/: CMakeLists.txt
PSXEmulator/src/CPU/: CPU.cpp  CPU.h  Instruction.cpp  Instruction.h
PSXEmulator/src/CPU/COP/: COP0.cpp  COP0.h  COP2.cpp  COP2.h
PSXEmulator/src/CPU/COP/Stolen/gte/: command.h  gte.cpp  gte.h  math.cpp  math.h  opcodes.cpp
PSXEmulator/src/Core/: Core.cpp  config.cpp  config.h
PSXEmulator/src/DMA/: Attributes.h  Channel.cpp  Channel.h  Dma.cpp  Dma.h
PSXEmulator/src/GPU/: Gpu.cpp  Gpu.h  VRAM.cpp  VRAM.h
PSXEmulator/src/GPU/Rendering/: Buffer.cpp  Buffer.h  Rasterizer.cpp  Rasterizer.h  Renderer.cpp  Renderer.h
PSXEmulator/src/Memory/: IRQ.h  Range.h  interconnect.cpp  interconnect.h
PSXEmulator/src/Memory/Bios/: Bios.cpp  Bios.h
PSXEmulator/src/Memory/CDROM/: CDROM.cpp  CDROM.h  Disk.cpp  Disk.h  Location.h  Sector.cpp  Sector.h  TrackBuilder.cpp  TrackBuilder.h  fifo.h
PSXEmulator/src/Memory/CDROM/Stolen/: cdrom.c  cdrom.h  cue.c  cue.h
PSXEmulator/src/Memory/IO/: SIO.cpp  SIO.h
PSXEmulator/src/Memory/IO/Peripherals/: DigitalController.cpp  DigitalController.h  MemoryCard.cpp  MemoryCard.h
PSXEmulator/src/Memory/MDEC/: MDEC.cpp  MDEC.h
PSXEmulator/src/Memory/Memories/: Ram.cpp  Ram.h  ScratchPad.cpp  ScratchPad.h
PSXEmulator/src/Memory/Timers/: Timer.cpp  Timer.h  Timers.cpp  Timers.h
PSXEmulator/src/SPU/: SPU.cpp  SPU.h
PSXEmulator/src/SPU/Stolen/: adsr.cpp  adsr.h  noise.h  regs.h  reverb.cpp  sample.h  spu.cpp  spu.h  voice.cpp  voice.h
PSXEmulator/src/Utils/: Bitwise.h
PSXEmulator/src/Utils/FileSystem/: FileManager.h
Shaders/: bloomFragment.glsl  bloom_blur.frag  bloom_threshold.frag  fragment.glsl  vertex - Copy.glsl  vertex.glsl
Utility/FileSystem/: FileManager.cpp
src/: CMakeLists.txt
src/CPU/: CPU.cpp  CPU.h  CPUTests.cpp  CPUTests.h  Instruction.h
src/CPU/COP/: COP0.cpp  COP0.h  COP2.cpp  COP2.h
src/CPU/COP/Stolen/gte/: gte.cpp  gte.h  opcodes.cpp
src/Core/: Core.cpp
src/DMA/: Channel.cpp  Channel.h  Dma.cpp  Dma.h
src/GPU/: GPUTests.cpp  GPUTests.h  Gpu.cpp  Gpu.h  VRAM.cpp  VRAM.h
src/GPU/Rendering/: Buffer.h  Rasterizer.cpp  Rasterizer.h  Renderer.cpp  Renderer.h
src/Memory/: IRQ.h  Range.h  interconnect.cpp  interconnect.h
src/Memory/Bios/: Bios.cpp  Bios.h
src/Memory/CDROM/: CDROM.cpp  CDROM.h  Disk.cpp  Disk.h  Sector.cpp  Sector.h  TrackBuilder.cpp  TrackBuilder.h  fifo.h
src/Memory/IO/: SIO.cpp  SIO.h
src/Memory/IO/Peripherals/: DigitalController.cpp  DigitalController.h  MemoryCard.cpp  MemoryCard.h
src/Memory/MDEC/: MDEC.cpp  MDEC.h
src/Memory/Memories/: Ram.cpp  Ram.h  ScratchPad.cpp  ScratchPad.h
src/Memory/Timers/: Timer.cpp  Timer.h  Timers.cpp  Timers.h
src/SPU/: SPU.cpp  SPU.h
src/SPU/Stolen/: adsr.cpp  adsr.h  noise.h  regs.h  spu.cpp  spu.h  voice.cpp  voice.h
src/Utils/FileSystem/: FileManager.h
